--- a/GAS/View/Project.html
+++ b/GAS/View/Project.html
@@ -242,8 +242,8 @@
                     <button type="button" class="btn btn-success" ng-click="StatusUpdate()" ng-disabled="newData.AccHolder.$invalid || newData.Amount.$invalid || newData.Remark.$invalid">Update</button>
                     &nbsp;&nbsp; <button type="button" class="btn btn-warning" ng-click="cancel()">Cancel</button>
                 </div>
-                <div ng-show="status_progress" class="loader_div">
-                    <img style="height:20px;width:20px;z-index:15;position:absolute; top:50%;left:50%;" class="fa fa-loader"/>
+                <div ng-show="status_progress" class="loader_div" >
+                    <img style="height:20px;width:20px;z-index:15; top:50%;left:50%;" src="Images/Icon/ajax-loader.gif"/>
                 </div>
 
                
