--- a/GAS/View/main.html
+++ b/GAS/View/main.html
@@ -38,7 +38,7 @@
             <div class="col-md-4">
                 <div class="card" style="height:180px;">
                     <div class="card-header card-header-color1">
-                        Account Info ( {{$scope.CurrentMonth | date:"MMM,yy"}} )
+                        Account Info ( {{CurrentMonth | date:"MMM,yy"}} )
                     </div>
                     <div class="card-body container1">
                         <div class="row">
@@ -74,17 +74,17 @@
 
                 <div class="card">
                     <div class="card-header card-header-color1">
-                        TDS/GST (  {{$scope.CurrentMonth | date:"MMM,yy"}} )
+                        TDS/GST (  {{CurrentMonth | date:"MMM,yy"}} )
                     </div>
                     <div class="container1">
 
                         <div class="row">
                             <div class="col-xs-8">
                                 <h4 style="color: #673AB7;"><b>TDS </b></h4>
-                                <p>Paid:0</p>
+                                <p>Paid:{{TDS_Paid |currency : "&#8377" : 2}}</p>
                             </div>
                             <div class="col-xs-4">
-                                <p>Payable:<h4><b>Rs4500</b></h4></p>
+                                <p>Payable:<h4><b>{{TDSPayable |currency : "&#8377" : 2}}</b></h4></p>
                             </div>
                         </div>
 
@@ -99,10 +99,10 @@
                         <div class="row">
                             <div class="col-xs-8">
                                 <h4 style="color: #4caf50;"><b>GST </b></h4>
-                                <p>Paid:0</p>
+                                <p>Paid:{{GST_Paid |currency : "&#8377" : 2}}</p>
                             </div>
                             <div class="col-xs-4">
-                                <p>Payable:<h4><b>Rs2500</b></h4></p>
+                                <p>Payable:<h4><b>{{GSTPayable |currency : "&#8377" : 2}}</b></h4></p>
                             </div>
                         </div>
 
@@ -116,7 +116,7 @@
 
             <div class="col-sm-4">
                 <div class="card-header">Payment (Sale)</div>
-                <div class="shadow mb-5 bg-c1 p-3 rounded" style="height:122px;">Payable Amount (Purchase):<h4> Rs71000</h4></div>
+                <div class="shadow mb-5 bg-c1 p-3 rounded" style="height:122px;">Payable Amount (Purchase):<h4> {{Receivable - ReceivedAmount|currency : "&#8377" : 2}}</h4></div>
 
             </div>
             <div class="col-sm-4 ">
@@ -124,8 +124,8 @@
                 <div class="shadow mb-5 p-3 rounded bg-c2" style="height:122px;">
 
 
-                    Receivable Amount (Invoices):<h4> Rs200000</h4>
-                    <h4 class="due">Due: <b>Rs20000</b></h4>
+                    Receivable Amount (Invoices):<h4> {{Payable - PaidAmount |currency : "&#8377" : 2}}</h4>
+                    <h4 class="due">Due: <b>{{DueAmount  |currency : "&#8377" : 2}}</b></h4>
                 </div>
 
             </div>
