--- a/GAS/View/Project.html
+++ b/GAS/View/Project.html
@@ -123,7 +123,7 @@
 
      
 
-        <div class="row"  ng-hide="ActivityList.length==0">
+        <div class="row"  ng-hide="projectdata.length==0">
             <div class="col-sm-12 zero_margin" >
                 <div class="panel panel-default" style="margin:5px;">
                     <!--  <linechart api="api" style="margin:50px; height:200px;" data="expensedata" options="expenseOptions"></linechart>-->
