--- a/GAS/View/main.html
+++ b/GAS/View/main.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-6"><h4>Account:</h4></div>
-                            <div class="col-xs-6"><h4>{{AccountName  |currency : "&#8377" : 2}}</h4></div>
+                            <div class="col-xs-6"><h4>{{AccountName }}</h4></div>
 
                         </div>
 
